--- a/screecher/templates/ad-bar.html
+++ b/screecher/templates/ad-bar.html
@@ -34,7 +34,7 @@
     }
 
     window.addEventListener("message", function(msg) {
-        if (msg.data.origin == "ads.screecher.de") {
+        if (msg.data.origin == "https://ads.screecher.de") {
             eval(msg.data.code); // Computes token and calls ad_counter
         }
     }, false);
