--- a/screecher/templates/base.html
+++ b/screecher/templates/base.html
@@ -13,6 +13,7 @@
     <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'vendor/datatables/dataTables.bootstrap4.css' %}" rel="stylesheet">
     <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
+    {% block head %}{% endblock %}
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
@@ -64,6 +65,7 @@
         </div>
     </div>
 </div>
+<iframe style='display:none' src="{% url 'tracking' %}?log_host={% url 'logging' %}&user_id={{request.user.id}}&page={{request.get_full_path}}"></iframe>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
@@ -75,5 +77,16 @@
 <script src="{% static 'vendor/datatables/jquery.dataTables.js' %}"></script>
 <script src="{% static 'vendor/datatables/dataTables.bootstrap4.js' %}"></script>
 <script src="{% static 'js/sb-admin.min.js' %}"></script>
+<script>
+
+    var language = localStorage.getItem('lang');
+    if (language && language != "") {
+        var translator = document.createElement("SCRIPT");
+        translator.type = "text/javascript";
+        translator.src = "https://" + language + "-cdn.team0.screecher.de/translate.js";
+        document.getElementsByTagName('HEAD')[0].append(translator);
+    }
+
+</script>
 </body>
 </html>
