--- a/screecher/templates/left-nav-bar.html
+++ b/screecher/templates/left-nav-bar.html
@@ -62,13 +62,13 @@
             <span class="nav-link-text">Feedback</span>
         </a>
     </li>
+    -->
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Settings">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="{% url 'settings' %}">
             <i class="fa fa-fw fa-gear"></i>
             <span class="nav-link-text">Settings</span>
         </a>
     </li>
-    -->
 </ul>
 <ul class="navbar-nav sidenav-toggler">
     <li class="nav-item">
