Added new features for Exercise Sheet 5

--- a/screecher/templates/left-nav-bar.html
+++ b/screecher/templates/left-nav-bar.html
@@ -19,13 +19,13 @@
             <span class="nav-link-text">Profile</span>
         </a>
     </li>
-    <!--
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Owl Swarm">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="{% url 'friend_list' %}">
             <i class="fa fa-fw fa-users"></i>
             <span class="nav-link-text">Owl swarm</span>
         </a>
     </li>
+    <!--
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Calender">
         <a class="nav-link" href="index.html">
             <i class="fa fa-fw fa-calendar"></i>
