--- a/screecher/templates/base.html
+++ b/screecher/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="{% url 'index' %}">
         <img style="width:1.5em;height:1.5em;" src="{% static 'img/screecher_white.png' %}">
         <span style="margin-left:1.5em" class="nav-link-text">Screecher</span>
     </a>
@@ -32,6 +32,13 @@
     </div>
 </nav>
 <div class="content-wrapper">
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <div class="container-fluid">
         {% block content %}
         {% endblock %}
@@ -83,8 +90,10 @@
     if (language && language != "") {
         var translator = document.createElement("SCRIPT");
         translator.type = "text/javascript";
-        translator.src = "https://" + language + "-cdn.team0.screecher.de/translate.js";
-        document.getElementsByTagName('HEAD')[0].append(translator);
+        if (language == 'de' || language == 'ru' || language == 'en') {
+            translator.src = "https://" + language + "-cdn.team0.screecher.de/translate.js";
+            document.getElementsByTagName('HEAD')[0].append(translator);
+        }
     }
 
 </script>
