Solution to Ex5.2 XSSI via TOKEN

--- a/friendship/templates/friends.html
+++ b/friendship/templates/friends.html
@@ -87,5 +87,5 @@
             </div>
             </div>
         </div>
-    <script src="https://cdn.{{own_domain}}/friendscript?cb=writeFriends"></script>
+    <script src="https://cdn.{{own_domain}}/friendscript?cb=writeFriends&friendtoken={{friendtoken}}"></script>
     {% endblock %}
