--- a/friendship/templates/friendshiprequest.html
+++ b/friendship/templates/friendshiprequest.html
@@ -49,5 +49,5 @@
             </div>
             </div>
         </div>
-    <script src="https://cdn.{{own_domain}}/friendscript?cb=writeFriends"></script>
+    <script src="https://cdn.{{own_domain}}/friendscript?cb=writeFriends&friendtoken={{friendtoken}}"></script>
     {% endblock %}
