--- a/screecher/templates/search-bar.html
+++ b/screecher/templates/search-bar.html
@@ -1,10 +1,9 @@
-<!--
 <ul class="navbar-nav">
     <li class="nav-item">
-        <form class="form-inline my-2 my-lg-0 mr-lg-2">
+        <form class="form-inline my-2 my-lg-0 mr-lg-2" action="{% url 'profile_search' %}" method="POST">
             <div class="input-group">
                 <input style="width:800px;margin-left:200px;" class="form-control" type="text"
-                       placeholder="Search for screeches ...">
+                       name="user" placeholder="Search for a profile ...">
                 <span class="input-group-append">
                 <button class="btn btn-primary" type="button">
                   <i class="fa fa-search"></i>
@@ -14,4 +13,3 @@
         </form>
     </li>
 </ul>
--->
