Added new features for Exercise Sheet 8

--- a/screecher/templates/left-nav-bar.html
+++ b/screecher/templates/left-nav-bar.html
@@ -53,14 +53,12 @@
             <span class="nav-link-text">Premium</span>
         </a>
     </li>
-    <!--
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="OwlCash">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="{% url 'miner' %}">
             <i class="fa fa-fw fa-btc"></i>
             <span class="nav-link-text">OwlCash</span>
         </a>
     </li>
-    -->
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Feedback">
         <a class="nav-link" href="{% url 'feedback' %}">
             <i class="fa fa-fw fa-commenting-o"></i>
